--- a/src/App.css
+++ b/src/App.css
@@ -1,63 +1,63 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+    height: 40vmin;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
+
 .frame {
-  border: 2px solid white;
-  width: 800px;
-  padding:20px
+    border: 2px solid white;
+    width: 800px;
+    padding: 20px;
 }
 
-.container{
-  width: 80%;;
-  margin:0 auto;
-  margin-top: 50px;
-  padding:5px;
+.container {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 50px;
+    padding: 5px;
 }
 
-li{
-  width: 500px;
-  text-align: left;
-  color:black;
-  margin: 0 auto;
+li {
+    width: 500px;
+    text-align: left;
+    color: black;
+    margin: 0 auto;
 }
 
 li button {
-  float:right;
-  margin-left: 150px;
+    float: right;
+    margin-left: 150px;
 }
 
 .completed {
-  text-decoration : line-through
+    text-decoration: line-through;
 }
 
-.row{
-  margin-top:25px;
+.row {
+    margin-top: 25px;
 }
 
-form{
-  margin:0 auto;
+form {
+    margin: 0 auto;
 }
 
 .form-control {
-  width: 500px;
-
+    width: 500px;
 }
 
 .myBtn {
-  margin: 0 auto;
+    margin: 0 auto;
 }
